feat(Cli): Check boolean values
Signed-off-by: Arnau Siches <asiches@gmail.com>

--- a/man/sac.1
+++ b/man/sac.1
@@ -24,7 +24,7 @@ canonical form.
 \f[C]blob\ hash\f[] \- Takes an blob and generates its hash.
 .SS Values
 .IP \[bu] 2
-\f[C]value\ check\f[] \- Checks a value againt a type.
+\f[C]value\ check\ \-\-type\ <type>\f[] \- Checks a value againt a type.
 .SH EXAMPLES
 .PP
 Canonicalise a blob:
